# scour

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agentcore_websearch.py  pyproject.toml  requirements.txt  setup.sh  teardown.sh
.github/workflows/: ci.yml
assets/: demo.tape
examples/: demo.py
iam/: trust-policy.template.json
skills/agentcore-websearch/: .env.example  SKILL.md  agentcore_websearch.py  requirements.txt  websearch
skills/agentcore-websearch/iam/: permissions-policy.template.json
skills/scour/: SKILL.md
src/agentcore_websearch/: cli.py
src/scour/: __init__.py  auth.py  cli.py  core.py  fetch.py  http_bridge.py  mcp_server.py
tests/: test_auth.py  test_core.py  test_fetch.py
